# l2d-obs

./: .gitignore
.github/workflows/: build.yml
l2d.js/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
l2d.js/src/: App.vue  ws.ts
l2d.rs/: Cargo.toml  config.toml.default
l2d.rs/src/: api.rs  config.rs  global.rs  main.rs  micro.rs  ws.rs
l2d.rs/src/api/: model.rs
l2d.rs/src/ws/: msg.rs
